--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -32,8 +32,13 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=true
+newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+VENDORFORGE_RELEASE_STORE_FILE=vendorforge.keystore
+VENDORFORGE_RELEASE_KEY_ALIAS=vendorforge
+VENDORFORGE_RELEASE_STORE_PASSWORD=vendorforge
+VENDORFORGE_RELEASE_KEY_PASSWORD=vendorforge
