--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,14 +17,17 @@ end
 target 'VendorForge' do
   config = use_native_modules!
 
+  # Disable New Architecture
+  ENV['RCT_NEW_ARCH_ENABLED'] = '0'
+
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
+    :fabric_enabled => false,
+  :hermes_enabled => true,
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
       config[:reactNativePath],
