--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply plugin: "com.google.gms.google-services" // ✅ Apply here
+apply plugin: "com.google.gms.google-services"
 
 react {
     autolinkLibrariesWithApp()
@@ -9,6 +9,7 @@ react {
 
 def enableProguardInReleaseBuilds = false
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
+def hermesEnabled = true
 
 android {
     ndkVersion rootProject.ext.ndkVersion
@@ -16,6 +17,7 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace "com.vendor.forge.app"
+
     defaultConfig {
         applicationId "com.vendor.forge.app"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -26,19 +28,17 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('debug-final.keystore')
+            storeFile file(System.getenv("HOME") + "/.android/debug.keystore")
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
         release {
-            if (project.hasProperty('VENDORFORGE_RELEASE_STORE_FILE')) {
-                storeFile file(VENDORFORGE_RELEASE_STORE_FILE)
-                storePassword VENDORFORGE_RELEASE_STORE_PASSWORD
-                keyAlias VENDORFORGE_RELEASE_KEY_ALIAS
-                keyPassword VENDORFORGE_RELEASE_KEY_PASSWORD
-            }
-        }
+        storeFile file('Prashiskshan.keystore')
+        storePassword 'releasekeystore'
+        keyAlias 'Prashiskshan'
+        keyPassword 'releasekeystore'
+    }
     }
 
     buildTypes {
@@ -46,11 +46,11 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            signingConfig signingConfigs.release
-            minifyEnabled false
-            shrinkResources false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-        }
+        signingConfig signingConfigs.release
+        minifyEnabled true
+        shrinkResources true
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    }
     }
 }
 
@@ -61,7 +61,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:34.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-analytics'
-    
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
