--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VendorForge",
+  "name": "Prashiskhan",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -28,8 +28,7 @@
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "^13.15.0"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
