--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,13 +8,16 @@ require Pod::Executable.execute_command('node', ['-p',
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
+# Add modular headers for Swift pods
+use_modular_headers!
+
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'Prashiskhan' do
+target 'VendorForge' do
   config = use_native_modules!
 
   # Disable New Architecture
