--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.4.1",
+    "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-firebase/app": "^23.0.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native/new-app-screen": "0.80.2",
@@ -22,9 +23,12 @@
     "@react-navigation/native-stack": "^7.3.24",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-blob-util": "^0.19.4",
     "react-native-config": "^1.5.6",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-pdf": "^7.0.1",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
